--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.6",
     "framer-motion": "^11.3.7",
     "googleapis": "^164.1.0",
     "next": "^14.2.5",
