feat: add authenticated experience and club layout

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.47.6",
+    "lucide-react": "^0.447.0",
     "framer-motion": "^11.3.7",
     "googleapis": "^164.1.0",
     "next": "^14.2.5",
